Add Mailer and tests to illustrate Phake issue

--- a/translations/messages+intl-icu.fr.yaml
+++ b/translations/messages+intl-icu.fr.yaml
@@ -2,3 +2,6 @@ head_title.default: Welcome
 website:
     description:
     name: Website
+phake.email:
+    subject: Hi there!
+    text: How are you?
